--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div id="loading-screen">
         <img src="https://watch.cineware.xyz/assets/img/CinewareFAVICON.svg" class="icon" alt="W">
-        <p class="loading-text"><i class="fa-solid fa-spinner"></i> Loading Resources...</p>
+        <p class="loading-text"><i class="fa-solid fa-spinner"></i> Loading video...</p>
 
         <a href="https://www.dmca.com/r/4jmm7gz" title="DMCA.com Protection Status" class="dmca-badge">
             <img src="https://images.dmca.com/Badges/dmca_protected_14_120.png?ID=90d75f56-87a4-44de-9e5c-99ed4326aaed" alt="DMCA Protection Status" />
@@ -37,6 +37,6 @@
         <iframe id="video-frame" allowfullscreen></iframe>
         <img src="https://watch.cineware.xyz/assets/img/CinewareFAVICON.svg" class="watermark" alt="W">
     </div>
-<script src="cdnfetch.js"></script>
+<script src="api.js"></script>
 </body>
 </html>
