--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         <iframe id="video-frame" allowfullscreen></iframe>
         <img src="https://watch.cineware.xyz/assets/img/CinewareFAVICON.svg" class="watermark" alt="W">
     </div>
-<script src="api.js"></script>
+<script src="cdnfetch.js"></script>
 </body>
 </html>
